Fixed the button alignment in profile page

--- a/client/src/pages/ProfilePage/sections/ProfileImg/ProfileImg.scss
+++ b/client/src/pages/ProfilePage/sections/ProfileImg/ProfileImg.scss
@@ -58,7 +58,7 @@
         display: flex;
         justify-content: flex-end;
         gap: .5rem;
-        margin-left: 1.85rem;
+        margin-left: 1.5rem;
     }
 
     &__card {
